--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -3,7 +3,7 @@
 about :
 
   name : 'wRemote'
-  description : '___'
+  description : 'Abstract interface of connection between several procedures'
   version : '0.4.0'
   enabled : 1
   interpreters :
@@ -92,4 +92,3 @@ build :
       # - build::npm
       - build::proto.export
       # - build::doc.export
-
