--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wremote", 
-  "version" : "0.3.3", 
+  "version" : "0.3.4", 
   "description" : "Abstract interface of connection between several procedures", 
   "author" : "Kostiantyn Wandalen <wanalen@willbe.so>", 
   "license" : "MIT", 
@@ -21,6 +21,6 @@
     "wConsequence" : "alpha", 
     "wappbasic" : "alpha"
   }, 
-  "devDependencies" : { "wPuppet" : "", "wTesting" : "alpha" }, 
+  "devDependencies" : { "wTesting" : "alpha", "wpuppet" : "alpha" }, 
   "keywords" : [ "wTools" ]
 }
