--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wremote", 
-  "version" : "0.3.16", 
+  "version" : "0.3.17", 
   "description" : "Abstract interface of connection between several procedures", 
   "author" : "Kostiantyn Wandalen <wanalen@willbe.so>", 
   "license" : "MIT", 
@@ -14,13 +14,13 @@
   }, 
   "dependencies" : 
   {
-    "wTools" : "alpha", 
-    "wCopyable" : "alpha", 
-    "wEventHandler" : "alpha", 
-    "wFiles" : "alpha", 
-    "wConsequence" : "alpha", 
-    "wappbasic" : "alpha"
+    "wTools" : "beta", 
+    "wCopyable" : "beta", 
+    "wEventHandler" : "beta", 
+    "wFiles" : "beta", 
+    "wConsequence" : "beta", 
+    "wappbasic" : "beta"
   }, 
-  "devDependencies" : { "wTesting" : "alpha", "wpuppet" : "alpha" }, 
+  "devDependencies" : { "wTesting" : "beta", "wpuppet" : "beta" }, 
   "keywords" : [ "wTools" ]
 }
