--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name" : "wremote", 
-  "version" : "0.3.25", 
-  "description" : "Abstract interface of connection between several procedures", 
-  "author" : "Kostiantyn Wandalen <wanalen@willbe.so>", 
-  "license" : "MIT", 
-  "main" : "proto/dwtools/amid/l3/rmeote/Include.s", 
-  "files" : [ "proto/dwtools/amid/l3", "proto/dwtools/Tools.s" ], 
-  "scripts" : { "test" : "wtest .run proto", "docgen" : "wdocgen .build proto" }, 
-  "repository" : { "type" : "git", "url" : "https ://github.com/Wandalen/wRemote.git" }, 
-  "bugs" : 
+  "name" : "wremote",
+  "version" : "0.3.26",
+  "description" : "Abstract interface of connection between several procedures",
+  "author" : "Kostiantyn Wandalen <wanalen@willbe.so>",
+  "license" : "MIT",
+  "main" : "proto/dwtools/amid/l3/rmeote/Include.s",
+  "files" : [ "proto/dwtools/amid/l3", "proto/dwtools/Tools.s" ],
+  "scripts" : { "test" : "wtest .run proto", "docgen" : "wdocgen .build proto" },
+  "repository" : { "type" : "git", "url" : "https ://github.com/Wandalen/wRemote.git" },
+  "bugs" :
   {
     "url" : "https ://github.com/Wandalen/wRemote/issues"
-  }, 
-  "dependencies" : 
+  },
+  "dependencies" :
   {
-    "wTools" : "alpha", 
-    "wCopyable" : "alpha", 
-    "wEventHandler" : "alpha", 
-    "wFiles" : "alpha", 
-    "wConsequence" : "alpha", 
-    "wappbasic" : "alpha"
-  }, 
-  "devDependencies" : { "wTesting" : "alpha", "wpuppet" : "alpha" }, 
+    "wTools" : "gamma",
+    "wCopyable" : "gamma",
+    "wEventHandler" : "gamma",
+    "wFiles" : "gamma",
+    "wConsequence" : "gamma",
+    "wappbasic" : "gamma"
+  },
+  "devDependencies" : { "wTesting" : "gamma", "wpuppet" : "gamma" },
   "keywords" : [ "wTools" ]
 }
