--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wremote",
-  "version" : "0.3.26",
+  "version" : "0.3.27",
   "description" : "Abstract interface of connection between several procedures",
   "author" : "Kostiantyn Wandalen <wanalen@willbe.so>",
   "license" : "MIT",
@@ -14,13 +14,13 @@
   },
   "dependencies" :
   {
-    "wTools" : "gamma",
-    "wCopyable" : "gamma",
-    "wEventHandler" : "gamma",
-    "wFiles" : "gamma",
-    "wConsequence" : "gamma",
-    "wappbasic" : "gamma"
+    "wTools" : "beta",
+    "wCopyable" : "beta",
+    "wEventHandler" : "beta",
+    "wFiles" : "beta",
+    "wConsequence" : "beta",
+    "wappbasic" : "beta"
   },
-  "devDependencies" : { "wTesting" : "gamma", "wpuppet" : "gamma" },
+  "devDependencies" : { "wTesting" : "beta", "wpuppet" : "beta" },
   "keywords" : [ "wTools" ]
 }
