--- a/.im.will.yml
+++ b/.im.will.yml
@@ -17,8 +17,8 @@ submodule :
   wConsequence :
     path : npm:///wConsequence
     enabled : 0 # submodule
-  wAppBasic :
-    path : npm:///wappbasic
+  wProcess :
+    path : npm:///wprocess
     enabled : 0 # submodule
 
   wTesting :
