--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license" : "MIT",
   "main" : "proto/dwtools/amid/l3/rmeote/Include.s",
   "files" : [ "proto/dwtools/amid/l3", "proto/dwtools/Tools.s" ],
-  "scripts" : { "test" : "wtest .run proto rapidity:-3", "docgen" : "wdocgen .build proto" },
+  "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen .build proto" },
   "repository" : { "type" : "git", "url" : "https ://github.com/Wandalen/wRemote.git" },
   "bugs" :
   {
