--- a/.im.will.yml
+++ b/.im.will.yml
@@ -67,7 +67,7 @@ path :
       content : prime
 
   entry.proto.no.tests :
-    path : proto/dwtools/amid/l3/remote/Include.s
+    path : proto/wtools/amid/l3/remote/Include.s
     criterion :
       tests : 'no.tests'
   entry.proto.only.tests :
@@ -76,7 +76,7 @@ path :
       tests : 'only.tests'
 
   entry.out.raw.debug :
-    path : '{path::out.*=1}/source/dwtools/amid/l3.test/remote/**'
+    path : '{path::out.*=1}/source/wtools/amid/l3.test/remote/**'
     criterion :
       debug : [ debug, release ]
       raw : raw
