--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description" : "Abstract interface of connection between several procedures",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "license" : "MIT",
-  "main" : "proto/dwtools/amid/l3/rmeote/Include.s",
-  "files" : [ "proto/dwtools/amid/l3", "proto/dwtools/Tools.s" ],
+  "main" : "proto/wtools/amid/l3/rmeote/Include.s",
+  "files" : [ "proto/wtools/amid/l3", "proto/wtools/Tools.s" ],
   "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen .build proto" },
   "repository" : { "type" : "git", "url" : "https ://github.com/Wandalen/wRemote.git" },
   "bugs" :
