--- a/package.json
+++ b/package.json
@@ -1,26 +1,40 @@
 {
-  "name" : "wremote",
-  "version" : "0.3.76",
-  "description" : "Abstract interface of connection between several procedures",
-  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
-  "license" : "MIT",
-  "main" : "proto/wtools/amid/l3/rmeote/Include.s",
-  "files" : [ "proto/wtools/amid/l3", "proto/node_modules/Tools" ],
-  "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen .build proto" },
-  "repository" : { "type" : "git", "url" : "https ://github.com/Wandalen/wRemote.git" },
-  "bugs" :
-  {
-    "url" : "https ://github.com/Wandalen/wRemote/issues"
+  "name": "wremote",
+  "version": "0.3.1",
+  "description": "Abstract interface of connection between several procedures",
+  "author": "Kostiantyn Wandalen <wanalen@01.school>",
+  "license": "MIT",
+  "main": "proto/node_modules/wremote",
+  "files": [
+    "proto/wtools/amid/l3",
+    "proto/node_modules/Tools",
+    "proto/node_modules/wremote"
+  ],
+  "scripts": {
+    "test": "wtest .run 'proto/**' rapidity:-1",
+    "docgen": "wdocgen .build proto"
   },
-  "dependencies" :
-  {
-    "wTools" : "alpha",
-    "wCopyable" : "alpha",
-    "wEventHandler" : "alpha",
-    "wFiles" : "alpha",
-    "wConsequence" : "alpha",
-    "wprocess" : "alpha"
+  "repository": {
+    "type": "git",
+    "url": "https ://github.com/Wandalen/wRemote.git"
   },
-  "devDependencies" : { "wTesting" : "alpha", "wpuppet" : "alpha" },
-  "keywords" : [ "wTools" ]
+  "bugs": {
+    "url": "https ://github.com/Wandalen/wRemote/issues"
+  },
+  "dependencies": {
+    "wTools": "latest",
+    "wprocess": "latest",
+    "wFiles": "latest",
+    "wEventHandler": "latest",
+    "wCopyable": "latest",
+    "wConsequence": "latest"
+  },
+  "devDependencies": {
+    "wTesting": "latest",
+    "wpuppet": "latest",
+    "eslint": "7.1.0"
+  },
+  "keywords": [
+    "wTools"
+  ]
 }
