--- a/will.yml
+++ b/will.yml
@@ -16,7 +16,7 @@ about:
     - Kostiantyn Wandalen <wanalen@01.school>
   npm.name: wremote
   npm.scripts:
-    test: wtest .run "proto/**" rapidity:-1
+    test: 'wtest .run "proto/**" rapidity:-1'
     docgen: wdocgen .build proto
 path:
   repository: 'git+https:///github.com/Wandalen/wRemote.git'
@@ -97,8 +97,6 @@ step:
     tar: 0
     criterion:
       content: npm
-  npm.publish:
-    shell: npm publish
   npm.generate:
     inherit: npm.generate
     entryPath: 'path::entry.out.*=1'
@@ -162,12 +160,6 @@ build:
       export: 1
     steps:
       - 'step::doc.export'
-  npm.export:
-    criterion:
-      content: npm
-      export: 1
-    steps:
-      - 'step::npm.publish'
   export:
     criterion:
       default: 1
