--- a/will.yml
+++ b/will.yml
@@ -11,9 +11,9 @@ about:
     - tools
     - wTools
   license: MIT
-  author: Kostiantyn Wandalen <wanalen@01.school>
+  author: Kostiantyn Wandalen <wandalen@obox.systems>
   contributors:
-    - Kostiantyn Wandalen <wanalen@01.school>
+    - Kostiantyn Wandalen <wandalen@obox.systems>
   npm.name: wremote
   npm.scripts:
     test: 'wtest .run "proto/**" rapidity:-1'
