--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wremote",
   "version": "0.4.17",
   "description": "Abstract interface of connection between several procedures",
-  "author": "Kostiantyn Wandalen <wanalen@01.school>",
+  "author": "Kostiantyn Wandalen <wandalen@obox.systems>",
   "license": "MIT",
   "main": "proto/node_modules/wremote",
   "files": [
