--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wremote",
-  "version": "0.4.23",
+  "version": "0.4.24",
   "description": "Abstract interface of connection between several procedures",
   "author": "Kostiantyn Wandalen <wandalen@obox.systems>",
   "license": "MIT",
@@ -22,15 +22,15 @@
     "url": "https ://github.com/Wandalen/wRemote/issues"
   },
   "dependencies": {
-    "wTools": "alpha",
-    "wprocess": "alpha",
-    "wEventHandler": "alpha",
-    "wCopyable": "alpha",
-    "wConsequence": "alpha"
+    "wTools": "latest",
+    "wprocess": "latest",
+    "wEventHandler": "latest",
+    "wCopyable": "latest",
+    "wConsequence": "latest"
   },
   "devDependencies": {
-    "wTesting": "alpha",
-    "wpuppet": "alpha",
+    "wTesting": "latest",
+    "wpuppet": "latest",
     "eslint": "7.32.0"
   },
   "keywords": [
